--- a/core/xxp.cabal
+++ b/core/xxp.cabal
@@ -9,7 +9,8 @@ Cabal-Version:       	>=1.8
 
 Library
   Hs-Source-Dirs:	lib-src
-  Build-Depends:	base >= 3 && <6
+  Build-Depends:	base >= 3 && <6,
+                        transformers
   Exposed-Modules:	Xxp.Core
 
 Executable xxp
