Configuration loading done, logging setup started, directory structure creation

--- a/core/xxp.cabal
+++ b/core/xxp.cabal
@@ -13,7 +13,7 @@ Library
                         transformers,
                         hslogger,
                         bytestring,
-                        aeson, filepath, uuid, time, old-locale, directory
+                        aeson, filepath, uuid, time, old-locale, directory, vector, unordered-containers, split, text, lens
   Exposed-Modules:	Xxp.Core
 
 Executable xxp
