Added 'success' file that is created if everything else worked

--- a/core/xxp.cabal
+++ b/core/xxp.cabal
@@ -28,7 +28,8 @@ Library
                         lifted-base,
                         pipes,
                         stm,
-                        HSH
+                        HSH,
+                        network
   Exposed-Modules:	Xxp.Core
 
 Executable xxp
