--- a/example/src/CMakeLists.txt
+++ b/example/src/CMakeLists.txt
@@ -13,4 +13,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DXXP_DEBUG")
 
 add_executable(test1 main.cpp)
-target_link_libraries(test1 ${Boost_LIBRARIES})
+target_link_libraries(test1 ${Boost_LIBRARIES} zmq)
