Added FindZMQ.cmake and cmake module path to mpibridge

--- a/mpi/CMakeLists.txt
+++ b/mpi/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project(mpibridge)
 
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../cmake")
+
 add_executable(mpibridge mpibridge.cpp)
 
 find_package(MPI REQUIRED)
@@ -9,11 +11,14 @@ include_directories(${MPI_INCLUDE_PATH})
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 
-include_directories(../adaptors/cpp/include/)
+find_package(ZMQ)
+include_directories(${ZMQ_INCLUDE_DIRS})
 
-find_package(Threads)
+include_directories(../adaptors/cpp/include/)
 
 set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
 set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
 
-target_link_libraries(mpibridge ${MPI_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} zmq)
+target_link_libraries(mpibridge ${MPI_LIBRARIES} ${Boost_LIBRARIES} ${ZMQ_LIBRARIES})
+
+install(TARGETS mpibridge DESTINATION /usr/local/bin COMPONENT mpibridge)
