Cleaned up the cmake files.

--- a/example/src/CMakeLists.txt
+++ b/example/src/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 project(xxpexample)
 
-FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
-IF (Boost_FOUND)
-    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-ENDIF()
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../../cmake")
+
+find_package(ZMQ)
+include_directories(${ZMQ_INCLUDE_DIRS})
 
 include_directories("../../adaptors/cpp/include")
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DXXP_DEBUG")
 
 add_executable(test1 main.cpp)
-target_link_libraries(test1 ${Boost_LIBRARIES} zmq)
+target_link_libraries(test1 ${ZMQ_LIBRARIES})
