--- a/example/src/CMakeLists.txt
+++ b/example/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 project(xxpexample)
 
+# Required to use xxp and link against the zeromq library
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../../cmake")
 
 find_package(ZMQ)
@@ -10,5 +11,6 @@ include_directories("../../adaptors/cpp/include")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DXXP_DEBUG")
 
+# Actual configuration starts here
 add_executable(test1 main.cpp)
 target_link_libraries(test1 ${ZMQ_LIBRARIES})
