--- a/example/config.json
+++ b/example/config.json
@@ -1,5 +1,7 @@
 {
     "test" : 3,
+    "vec" : [2,4,8,6],
+    "mat" : [[1,2,3],[4,5,6],[7,8]],
     "alpha" : { "action" : "loop",
 	      "begin" : 0.1,
 	      "step" : 0.25,
