--- a/example/src/CMakeLists.txt
+++ b/example/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project(xxpexample)
 
 # Required to use xxp and link against the zeromq library
-set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../../cmake")
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../../core/cmake")
 
 find_package(Boost)
 include_directories(${Boost_INCLUDE_DIR})
@@ -10,7 +10,7 @@ include_directories(${Boost_INCLUDE_DIR})
 find_package(ZMQ)
 include_directories(${ZMQ_INCLUDE_DIRS})
 
-include_directories("../../adaptors/cpp/include")
+include_directories("../../core/adaptors/cpp/include")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DXXP_DEBUG")
 
