--- a/example/config.json
+++ b/example/config.json
@@ -1,18 +1,3 @@
 {
-    "test" : 3,
-    "vec" : [2,4,8,6],
-    "mat" : [[1,2,3],[4,5,6],[7,8]],
-    "alpha" : { "action" : "loop",
-	      "begin" : 0.1,
-	      "step" : 0.25,
-	      "end" : 2.0
-	    },
-    "beta" : { "action" : "each", "values" : [0.1,0.5,0.7,0.8] },
-    "ext_params" : { "load" : "params.json" },
-    "t" : { "action" : "each", "values" : [ { "a" : 5, "b" : 42}, {"a" : 6, "b" : 47} ] },
-    "configuration" : { "action" : "refeed",
-			"data_tag" : "particles",
-			"block_tag" : "number_of_particles",
-			"group_size" : 2
-		      } 
+    "dummy" : 1.0
 }
