core: Added fetch and info commands to xxp

--- a/core/xxp.cabal
+++ b/core/xxp.cabal
@@ -8,7 +8,7 @@ Build-Type:		Simple
 Cabal-Version:       	>=1.8
 
 Data-Files: adaptors/cpp/include/*.hpp,
-            adaptors/cpp/include/*.h,	
+            adaptors/cpp/include/*.h,
 	    adaptors/cpp/include/xxp
 	    cmake/*.cmake,
 	    scaffold/cpp/*.cpp,
@@ -19,52 +19,54 @@ Data-Files: adaptors/cpp/include/*.hpp,
 Library
   Hs-Source-Dirs:	lib-src
   Build-Depends:	base >= 3 && <6,
-                        transformers,
-                        hslogger,
-                        bytestring,
-                        aeson, 
-                        filepath,
-                        uuid, 
-                        time, 
-                        old-locale, 
-                        directory, 
-                        vector, 
-                        process,
-                        unordered-containers, containers,
-                        split, 
-                        text, 
-                        lens, 
-                        lifted-base,
-                        pipes,
-                        stm,
-                        HSH,
-                        zeromq3-haskell,
-                        hastache,
-                        syb,
-                        base64-bytestring,
-                        Glob
-  Exposed-Modules:	XXP, 
-                        XXP.Core, 
-                        XXP.Experiment, 
-                        XXP.Logging, 
-                        XXP.State, 
-                        XXP.Setup, 
-                        XXP.Util,
-                        XXP.Process,
-                        XXP.IPC
-                        XXP.Modules.Shell,
-                        XXP.Modules.VCS,
-                        XXP.Modules.Build,
-                        XXP.Modules.Spawn,
-                        XXP.Modules.HPC,
-                        XXP.PostProcessing.Logs
+                  transformers,
+                  hslogger,
+                  bytestring,
+                  aeson,
+                  filepath,
+                  uuid,
+                  time,
+                  old-locale,
+                  directory,
+                  vector,
+                  process,
+                  unordered-containers,
+                  containers,
+                  split,
+                  text,
+                  lens,
+                  lifted-base,
+                  pipes,
+                  stm,
+                  HSH,
+                  zeromq3-haskell,
+                  hastache,
+                  syb,
+                  base64-bytestring,
+                  Glob,
+                  aeson-pretty
+  Exposed-Modules:	XXP,
+                    XXP.Core,
+                    XXP.Experiment,
+                    XXP.Logging,
+                    XXP.State,
+                    XXP.Setup,
+                    XXP.Util,
+                    XXP.Process,
+                    XXP.IPC
+                    XXP.Modules.Shell,
+                    XXP.Modules.VCS,
+                    XXP.Modules.Build,
+                    XXP.Modules.Spawn,
+                    XXP.Modules.HPC,
+                    XXP.PostProcessing.Logs
 
 Executable xxp
   Hs-Source-Dirs:	src
-  Build-Depends:	base >= 3 && <6, 
+  Build-Depends:	base >= 3 && <6,
                         cmdargs >= 0.10 && < 0.11,
                         transformers, xxp, old-locale, time, hastache, bytestring,
                         process, directory, filepath, hslogger, hsshellscript, split
   Main-Is:		Xxp.hs
   Other-Modules:        TermSize
- 
+
