--- a/core/xxp.cabal
+++ b/core/xxp.cabal
@@ -66,7 +66,7 @@ Executable xxp
   Build-Depends:	base >= 3 && <6,
                         cmdargs >= 0.10 && < 0.11,
                         transformers, xxp, old-locale, time, hastache, bytestring,
-                        process, directory, filepath, hslogger, hsshellscript, split
+                        process, directory, filepath, hslogger, hsshellscript, split, pipes
   Main-Is:		Xxp.hs
   Other-Modules:        TermSize
 
